--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=divace-width, user-scalable=no">
+    <meta name="author" content="Danilo Gonzalez">
+    <meta name="keywords" content="html, css, xml, javascript">
+    <meta name="description" content="Hoja de Vida de Danilo Gonzalez">
+    <title>Comenzando con la Fotografía</title>
+    <link rel="stylesheet" href="css/estilos.css">    
+    <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   </head>
   <body>
-    
+    <header>
+      <h1>Comenzando con la Fotografía</h1>
+    </header>
   </body>
 </html>
