cambios de menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
   </head>
   <body>
     <header>
-      <h1>Comenzando con la Fotografía</h1>
+      <article class="titulo">
+        <h1>Comenzando con la Fotografía</h1>
+      </article> 
+      <article class="menu">
+        
+      </article>
+      <navbar id="menu-principal">
+        <a href="#" style="text-decoration:none">Inicio</a> 
+        <a href="html\paisajes.html" >Paisajes</a>
+        <a href="html\retratos.html" >Retratos</a>
+      </navbar>
     </header>
   </body>
 </html>
