--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
     <meta name="keywords" content="html, css, xml, javascript">
     <meta name="description" content="Hoja de Vida de Danilo Gonzalez">
     <title>Comenzando con la Fotografía</title>
-    <link rel="stylesheet" href="css/estilos.css">    
+    <link rel="stylesheet" href="css/estilos.css">
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   </head>
   <body>
-    <header>
-      <article class="titulo">
-        <h1>Comenzando con la Fotografía</h1>
-      </article> 
-      <article class="menu">
-        
-      </article>
-      <navbar id="menu-principal">
-        <a href="#" style="text-decoration:none">Inicio</a> 
-        <a href="html\paisajes.html" >Paisajes</a>
-        <a href="html\retratos.html" >Retratos</a>
-      </navbar>
+    <header id="main-header">
+      <span class="site-name"><h1>Comenzando con la Fotografía</h1></span>
+      <nav>
+        <ul>
+          <li><a href="#" style="text-decoration:none">Inicio</a></li>
+          <li><a href="html\paisajes.html" >Paisajes</a></li>
+          <li><a href="html\retratos.html" >Retratos</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
