--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=divace-width, user-scalable=no">
+    <meta name="viewport" content="width=divace-width, initial-scale=1.0">
     <meta name="author" content="Danilo Gonzalez">
     <meta name="keywords" content="html, css, xml, javascript">
     <meta name="description" content="Hoja de Vida de Danilo Gonzalez">
@@ -12,12 +12,12 @@
   </head>
   <body>
     <header id="main-header">
-      <span class="site-name"><h1>Comenzando con la Fotografía</h1></span>
+      <span class="site-name">Comenzando con la Fotografía</span>
       <nav>
         <ul>
-          <li><a href="#" style="text-decoration:none">Inicio</a></li>
-          <li><a href="html\paisajes.html" >Paisajes</a></li>
-          <li><a href="html\retratos.html" >Retratos</a></li>
+          <li><a href="#" style="text-decoration:none">Inicio</a> </li>
+          <li><a href="html\paisajes.html">Paisajes</a> </li>
+          <li><a href="html\retratos.html">Retratos</a></li>
         </ul>
       </nav>
     </header>
