--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </head>
   <body>
     <header id="main-header">
-      <span class="site-name">Comenzando con la Fotografía</span>
+      <h1>Comenzando con la fotografía</h1>
       <nav>
-        <ul>
-          <li><a href="#" style="text-decoration:none">Inicio</a> </li>
-          <li><a href="html\paisajes.html">Paisajes</a> </li>
-          <li><a href="html\retratos.html">Retratos</a></li>
-        </ul>
-      </nav>
+  			<ul>
+  				<li><a href="#" style="text-decoration:none">Inicio</a></li>
+  				<li><a href="html\paisajes.html">Paisajes</a></li>
+  				<li><a href="html\retratos.html">Retratos</a></li>
+  			</ul>
+  		</nav>
     </header>
   </body>
 </html>
