--- a/index.html
+++ b/index.html
@@ -11,15 +11,24 @@
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   </head>
   <body>
-    <header id="main-header">
-      <h1>Comenzando con la fotografía</h1>
-      <nav>
-  			<ul>
-  				<li><a href="#" style="text-decoration:none">Inicio</a></li>
-  				<li><a href="html\paisajes.html">Paisajes</a></li>
-  				<li><a href="html\retratos.html">Retratos</a></li>
-  			</ul>
-  		</nav>
-    </header>
+    <div class="content" role="main">
+      <div class="main-header">
+        <h1>Comenzando con la fotografía</h1>
+        <nav>
+          <ul>
+            <li><a href="#" style="text-decoration:none">Inicio</a></li>
+            <li><a href="html\paisajes.html">Paisajes</a></li>
+            <li><a href="html\retratos.html">Retratos</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="imagen-central">
+        <img src="img\imagen-perros.jpg" alt="imagen-perros">
+      </div>
+      <div class="imagen-secundaria">
+        <img src="img\imagen-paisaje1.jpg" alt="imagen-paisaje1">
+        <img src="img\imagen-retrato1.jpg" alt="imagen-retrato1">
+      </div>
+    </div>
   </body>
 </html>
