--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
         <img src="img\imagen-perros.jpg" alt="imagen-perros">
       </div>
       <div class="imagen-secundaria">
-        <img src="img\imagen-paisaje1.jpg" alt="imagen-paisaje1">
-        <img src="img\imagen-retrato1.jpg" alt="imagen-retrato1">
+        <div class="imagen-sec-paisaje1">
+          <img src="img\imagen-paisaje1.jpg" alt="imagen-paisaje1">
+        </div>
+        <div class="imagen-sec-retrato1">
+          <img src="img\imagen-retrato1.jpg" alt="imagen-retrato1">
+        </div>
       </div>
+    </div>
+    <div class="footer">
+      
     </div>
   </body>
 </html>
