--- a/index.html
+++ b/index.html
@@ -28,14 +28,36 @@
       <div class="imagen-secundaria">
         <div class="imagen-sec-paisaje1">
           <img src="img\imagen-paisaje1.jpg" alt="imagen-paisaje1">
+          <h2>Paisajes</h2>
         </div>
         <div class="imagen-sec-retrato1">
           <img src="img\imagen-retrato1.jpg" alt="imagen-retrato1">
+          <h2>Restratos</h2>
         </div>
       </div>
-    </div>
-    <div class="footer">
-      
+      <div class="footer">
+        <div class="contacto">
+          <h2>Contacto</h2>
+          <strong><a href="mailto:info@fotografia.com?subject=feedback">info@fotografia.com</a></strong>
+          <p>Calle 5 con 3</p>
+          <p>Telefono: 1234567890</p>
+        </div>
+        <div class="terminos">
+          <h2>Terminos</h2>
+          <p>Conoce nuestros terminos y condiciones</p>
+        </div>
+        <div class="redes-sociales">
+          <h2>Redes Sociales</h2>
+          <p>Comparte en nuestras redes</p>
+          <p><a href="https://es-la.facebook.com/"><img src="img\facebook.jpg" alt="Comenzando Fotografia" width="25px"></a> Comenzando Fotografia </p>
+          <p><a href="https://twitter.com/login?lang=es"><img src="img\twitter.png" alt="@ComenzandoFotografia" width="25px"></a> @ComenzandoFotografia</p>
+          <p><a href="https://www.youtube.com/"><img src="img\youtu.jpg" alt="ComenzandoFotografia" width="25px"></a> ComenzandoFotografia</p>
+        </div>
+        <div class="derechos">
+          <h2>Derechos</h2>
+          <p>&copy Copyright - 2017</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
