--- a/html/paisajes.html
+++ b/html/paisajes.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="html, css, xml, javascript">
     <meta name="description" content="Hoja de Vida de Danilo Gonzalez">
     <title>Comenzando con la Fotografía</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="..\css/estilos.css">
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   </head>
   <body>
@@ -16,13 +16,23 @@
         <h1>Comenzando con la fotografía</h1>
         <nav>
           <ul>
-            <li><a href="..\index.html">Inicio</a></li>
-            <li><a href="#" style="text-decoration:none">Paisajes</a></li>
-            <li><a href="retratos.html">Retratos</a></li>
+            <li><a href="#" style="text-decoration:none">Inicio</a></li>
+            <li><a href="html\paisajes.html">Paisajes</a></li>
+            <li><a href="html\retratos.html">Retratos</a></li>
           </ul>
         </nav>
       </div>
 
+      <div class="imagen-secundaria">
+        <div class="imagen-sec-paisaje1">
+          <img src="../img\imagen-paisaje1.jpg" alt="imagen-paisaje1">
+          <h2>Paisajes</h2>
+        </div>
+        <div class="imagen-sec-retrato1">
+          <img src="../img\imagen-retrato1.jpg" alt="imagen-retrato1">
+          <h2>Restratos</h2>
+        </div>
+      </div>
       <div class="footer">
         <div class="contacto">
           <h2>Contacto</h2>
@@ -37,9 +47,9 @@
         <div class="redes-sociales">
           <h2>Redes Sociales</h2>
           <p>Comparte en nuestras redes</p>
-          <p><a href="https://es-la.facebook.com/"><img src="../img\facebook.jpg" alt="Comenzando Fotografia" width="25px"></a> Comenzando Fotografia </p>
-          <p><a href="https://twitter.com/login?lang=es"><img src="../img\twitter.png" alt="@ComenzandoFotografia" width="25px"></a> @ComenzandoFotografia</p>
-          <p><a href="https://www.youtube.com/"><img src="../img\youtu.jpg" alt="ComenzandoFotografia" width="25px"></a> ComenzandoFotografia</p>
+          <p><a href="https://es-la.facebook.com/"><img src="img\facebook.jpg" alt="Comenzando Fotografia" width="25px"></a> Comenzando Fotografia </p>
+          <p><a href="https://twitter.com/login?lang=es"><img src="img\twitter.png" alt="@ComenzandoFotografia" width="25px"></a> @ComenzandoFotografia</p>
+          <p><a href="https://www.youtube.com/"><img src="img\youtu.jpg" alt="ComenzandoFotografia" width="25px"></a> ComenzandoFotografia</p>
         </div>
         <div class="derechos">
           <h2>Derechos</h2>
