--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=divace-width, initial-scale=1.0">
     <meta name="author" content="Danilo Gonzalez">
     <meta name="keywords" content="html, css, xml, javascript">
-    <meta name="description" content="Hoja de Vida de Danilo Gonzalez">
+    <meta name="description" content="Comenzando con la Fotografía">
     <title>Comenzando con la Fotografía</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
