--- a/html/retratos.html
+++ b/html/retratos.html
@@ -17,29 +17,29 @@
         <nav>
           <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="#" style="text-decoration:none">Paisajes</a></li>
-            <li><a href="retratos.html">Retratos</a></li>
+            <li><a href="paisajes.html">Paisajes</a></li>
+            <li><a href="#" style="text-decoration:none">Retratos</a></li>
           </ul>
         </nav>
       </div>
       <div class="galeria">
-        <div class="roatan1">
-          <img src="../img\roatan1.jpg" alt="paisajeroatan">
+        <div class="retrato1">
+          <img src="../img\retrato1.jpg" alt="paisajeroatan">
         </div>
-        <div class="roatan2">
-          <img src="../img\roatan2.jpg" alt="paisajeroatan">
+        <div class="retrato2">
+          <img src="../img\retrato2.jpg" alt="paisajeroatan">
         </div>
-        <div class="roatan3">
-          <img src="../img\roatan3.jpg" alt="paisajeroatan">
+        <div class="retrato3">
+          <img src="../img\retrato3.jpg" alt="paisajeroatan">
         </div>
-        <div class="roatan4">
-          <img src="../img\roatan4.jpg" alt="paisajeroatan">
+        <div class="retrato4">
+          <img src="../img\retrato4.jpg" alt="paisajeroatan">
         </div>
-        <div class="roatan5">
-          <img src="../img\roatan5.jpg" alt="paisajeroatan">
+        <div class="retrato5">
+          <img src="../img\retrato5.jpg" alt="paisajeroatan">
         </div>
-        <div class="roatan6">
-          <img src="../img\roatan6.jpg" alt="paisajeroatan">
+        <div class="retrato6">
+          <img src="../img\retrato6.jpg" alt="paisajeroatan">
         </div>
       </div>
       <div class="footer">
